--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,3 +1,16 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: postgres-pvc
+  namespace: two-tier
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: standard
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,10 +29,6 @@ spec:
       containers:
         - name: postgres
           image: postgres:16
-         volumeMounts:
-            - name: postgres-data
-              mountPath: /var/lib/postgresql/data
-
           ports:
             - containerPort: 5432
           env:
@@ -38,11 +47,13 @@ spec:
                 secretKeyRef:
                   name: app-secret
                   key: POSTGRES_PASSWORD
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
       volumes:
         - name: postgres-data
           persistentVolumeClaim:
-          claimName: postgres-pvc
-
+            claimName: postgres-pvc
 ---
 apiVersion: v1
 kind: Service
@@ -56,3 +67,5 @@ spec:
     - port: 5432
       targetPort: 5432
   type: ClusterIP
+
+
