--- a/helm/two-tier/values.yaml
+++ b/helm/two-tier/values.yaml
@@ -8,11 +8,11 @@ backend:
 
   resources:
     requests:
-      cpu: 100m
-      memory: 128Mi
+      cpu: "100m"
+      memory: "128Mi"
     limits:
-      cpu: 500m
-      memory: 512Mi
+      cpu: "500m"
+      memory: "512Mi"
 
   ingress:
     enabled: true
@@ -27,7 +27,7 @@ backend:
 
 postgres:
   name: postgres
-  image: postgres:15
+  image: postgres:16
   port: 5432
   storage:
     size: 1Gi
