--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,21 +5,69 @@ on:
     branches:
       - main
 
+# Needed so the workflow can commit back to the repo (GitOps bump)
+permissions:
+  contents: write
+
 jobs:
-  build-deploy:
+  build_push_and_bump_values:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set image variables
+        id: vars
+        run: |
+          echo "IMAGE=${{ secrets.DOCKER_USERNAME }}/gcp-backend" >> $GITHUB_ENV
+          echo "TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
-    - name: Build & Push Image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/gcp-backend:latest .
-        docker push ${{ secrets.DOCKER_USERNAME }}/gcp-backend:latest
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image (latest + sha tag)
+        run: |
+          docker build -t "${IMAGE}:${TAG}" -t "${IMAGE}:latest" .
+
+      - name: Push Docker image (latest + sha tag)
+        run: |
+          docker push "${IMAGE}:${TAG}"
+          docker push "${IMAGE}:latest"
+
+      # Update Helm values.yaml so ArgoCD will deploy the new image tag
+      - name: Update Helm values.yaml image repository + tag
+        run: |
+          set -e
+
+          VALUES_FILE="helm/two-tier/values.yaml"
+
+          if [ ! -f "$VALUES_FILE" ]; then
+            echo "ERROR: $VALUES_FILE not found"
+            exit 1
+          fi
+
+          # Update repository under image:
+          # Replace the line after "image:" that starts with "repository:"
+          # and replace tag line.
+          sed -i "s|^\(\s*repository:\s*\).*|\1\"${IMAGE}\"|g" "$VALUES_FILE"
+          sed -i "s|^\(\s*tag:\s*\).*|\1\"${TAG}\"|g" "$VALUES_FILE"
+
+          echo "Updated values.yaml:"
+          grep -nE "^\s*repository:|^\s*tag:" "$VALUES_FILE"
+
+      - name: Commit & push Helm values.yaml bump
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          git add helm/two-tier/values.yaml
+
+          # If no change, don't fail
+          git commit -m "ci: bump image tag to ${TAG}" || echo "No changes to commit"
+
+          git push
+
