--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.11-slim
 
+# Build-time metadata (set by GitHub Actions)
+ARG GIT_SHA=dev
+ARG BUILD_TIME=unknown
+ENV GIT_SHA=$GIT_SHA
+ENV BUILD_TIME=$BUILD_TIME
+
 WORKDIR /app
 
 COPY requirements.txt .
@@ -8,3 +14,4 @@ RUN pip install -r requirements.txt
 COPY . .
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
